--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,5 +37,5 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/mosdns:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/mosdns:${{ env.TAG }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/flexget:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/flexget:${{ env.TAG }}
